recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:10: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
droite()
      ^FourSquare:11: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
avance()
      ^