recursion.lessons.recursion.square.FourSquare.scala.code
override  def run() {

var i=0
def carre(){
	
avance(100:Double)
droite(90:Double)
avance(100:Double)
droite()
avance()

}

for(i<-0 to 3){
	carre()
	droite(90:Double)
	
}

}